--- a/app/src/main/res/layout/activity_find_beer.xml
+++ b/app/src/main/res/layout/activity_find_beer.xml
@@ -16,7 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="37dp"/>
+        android:layout_marginTop="37dp"
+        android:entries="@array/beer_colors"/>
 
     <Button
         android:id="@+id/find_beer"
@@ -24,13 +25,13 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/color"
         android:layout_below="@id/color"
-        android:text="Button"/>
+        android:text="@string/find_beer"/>
 
     <TextView
         android:id="@+id/brands"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/find_beer"
+        android:text="@string/brands"
         android:layout_alignLeft="@id/find_beer"
         android:layout_below="@id/find_beer"
         android:layout_marginTop="18dp"/>
