--- a/app/src/main/res/layout/activity_find_beer.xml
+++ b/app/src/main/res/layout/activity_find_beer.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -23,9 +22,11 @@
         android:id="@+id/find_beer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@id/color"
-        android:layout_below="@id/color"
-        android:text="@string/find_beer"/>
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="89dp"
+        android:onClick="onClickFindBeer"
+        android:text="@string/find_beer" />
 
     <TextView
         android:id="@+id/brands"
@@ -34,6 +35,7 @@
         android:text="@string/brands"
         android:layout_alignLeft="@id/find_beer"
         android:layout_below="@id/find_beer"
-        android:layout_marginTop="18dp"/>
+        android:layout_marginTop="18dp"
+        android:layout_alignStart="@id/find_beer" />
 
 </RelativeLayout>
